force-app/main/default/objects/Transaction__c/fields/Completion_Pct__c.field-meta.xml
<CustomField>
    <fullName>Completion_Pct__c</fullName>
    <description>Checklist completion percent (Tasks Complete / Tasks Total). Drives the dashboard &quot;Completion by Deal&quot; bar chart.</description>
    <formula>IF(Tasks_Total__c &gt; 0, ROUND(100 * Tasks_Complete__c / Tasks_Total__c, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>