force-app/main/default/objects/Transaction__c/fields/Contract_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Executed_Date__c</fullName>
    <label>Contract Executed Date</label>
    <type>Date</type>
</CustomField>