force-app/main/default/objects/Transaction__c/fields/Earnest_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Earnest_At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Earnest At Risk</label>
    <type>Checkbox</type>
</CustomField>