force-app/main/default/objects/Transaction__c/fields/Earnest_Money__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money__c</fullName>
    <label>Earnest Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>