force-app/main/default/objects/Transaction__c/fields/EM_Wired__c.field-meta.xml
<CustomField>
    <fullName>EM_Wired__c</fullName>
    <formula>IF(ISBLANK(Earnest_Money__c), &quot;-&quot;,
  IF(Earnest_Money__c &gt;= 1000000,
     &quot;$&quot; &amp; TEXT(ROUND(Earnest_Money__c / 1000000, 2)) &amp; &quot;M&quot;,
     &quot;$&quot; &amp; TEXT(ROUND(Earnest_Money__c / 1000, 0)) &amp; &quot;K&quot;))</formula>
    <label>EM Wired</label>
    <type>Text</type>
</CustomField>