force-app/main/default/objects/Transaction__c/fields/EM_Wired_Date__c.field-meta.xml
<CustomField>
    <fullName>EM_Wired_Date__c</fullName>
    <label>EM Wired Date</label>
    <type>Date</type>
</CustomField>