force-app/main/default/objects/Transaction__c/fields/Feasibility_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Deadline__c</fullName>
    <label>Feasibility Deadline</label>
    <type>Date</type>
</CustomField>