force-app/main/default/objects/Transaction__c/fields/Feasibility_Missed__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feasibility Missed</label>
    <type>Checkbox</type>
</CustomField>