force-app/main/default/objects/Transaction__c/fields/Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Close_Date__c</fullName>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>