force-app/main/default/objects/Transaction__c/fields/Tasks_Complete__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Complete__c</fullName>
    <label>Tasks Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>