force-app/main/default/objects/Transaction__c/fields/Tasks_Display__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Display__c</fullName>
    <formula>TEXT(BLANKVALUE(Tasks_Complete__c, 0)) &amp; &quot; / &quot; &amp; TEXT(BLANKVALUE(Tasks_Total__c, 0))</formula>
    <label>Tasks Complete</label>
    <type>Text</type>
</CustomField>