force-app/main/default/objects/Transaction__c/fields/Tasks_Fanned_Out__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Fanned_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Fanned Out</label>
    <type>Checkbox</type>
</CustomField>