force-app/main/default/objects/Transaction__c/fields/Tasks_Open__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Open__c</fullName>
    <formula>BLANKVALUE(Tasks_Total__c, 0) - BLANKVALUE(Tasks_Complete__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasks Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>