force-app/main/default/objects/Transaction__c/fields/Tasks_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Overdue__c</fullName>
    <description>Rollup: count of this deal&apos;s checklist tasks past their due date and not yet completed. Drives the Transaction Dashboard &quot;Overdue Tasks&quot; metric.</description>
    <label>Tasks Overdue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>