force-app/main/default/objects/Transaction__c/fields/Wire_Approval_Due__c.field-meta.xml
<CustomField>
    <fullName>Wire_Approval_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wire Approval Due</label>
    <type>Checkbox</type>
</CustomField>