force-app/main/default/objects/Transaction__c/fields/Wire_Open_Risks__c.field-meta.xml
<CustomField>
    <fullName>Wire_Open_Risks__c</fullName>
    <description>Rollup: count of this deal&apos;s anti-fraud wire-verification tasks not yet verbally verified. 0 across all deals = Wire Sentinel secure.</description>
    <label>Wire Open Risks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>